--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Portfolio</title>
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 </head>
 <body>
   <header>
@@ -23,10 +24,8 @@
     <h1 class="section-title">ABOUT ME</h1>
     <div class="section-content">
       <p>
-        I am a passionate web developer with a strong foundation in both front-end and back-end technologies. 
-        My journey in web development started with a curiosity about how websites work, which led me to dive 
-        deep into HTML, CSS, and JavaScript. I enjoy creating responsive and user-friendly web applications 
-        that solve real-world problems.
+        Hello! I am Tanuja Negi.
+        I am a passionate web developer and a lifelong learner with a strong ambition to become a successful engineer. My journey began with a curiosity about how websites work, which led me to explore both front-end and back-end technologies. I enjoy creating responsive, user-friendly applications that solve real-world problems. Embracing new technologies keeps me motivated, fuels my creativity, and inspires me to build innovative projects that drive personal and professional growth.
       </p>
       <img src="assets/images/mypic1.jpg" alt="Tanuja Negi" class="profile-image">
     </div>
@@ -36,16 +35,18 @@
     <h1 class="section-title">MY PROJECTS</h1>
     <div class="project-grid">
       <div class="project-card">
-        <h3>Project 1</h3>
+        <h3>Portfolio</h3>
         <p>An interactive portfolio website showcasing creative work with smooth animations and responsive design.</p>
       </div>
       <div class="project-card">
-        <h3>Project 2</h3>
-        <p>A modern e-commerce platform built with React and Node.js, featuring real-time inventory management and secure payment processing.</p>
+        <h3>Voice Assistant</h3>
+        <p>Developed a voice assistant named jenny using Python which
+          could perform basic tasks like opening applications, browsing websites, and playing media using voice
+          commands.</p>
       </div>
       <div class="project-card">
-        <h3>Project 3</h3>
-        <p>A task management application with drag-and-drop functionality and real-time collaboration features.</p>
+        <h3>Hospital Management System</h3>
+        <p>Developed a Hospital Management System in Java using JDBC to handle appointments, patient records, and doctor information.</p>
       </div>
     </div>
   </section>
@@ -62,9 +63,32 @@
   </section>
 
   <section id="contact">
-    <h1 class="section-title">CONTACT ME</h1>
-    <div class="section-content">
-      <p>Get in touch with me for collaborations or opportunities.</p>
+    <h1 class="section-title">GET IN TOUCH</h1>
+    <div class="social-links">
+      <div class="social-section">
+        <img src="assets/images/github.jpg" alt="GitHub" class="social-image">
+        <a href="https://github.com/TANUGEHU" target="_blank" class="social-link">
+          <i class="fab fa-github"></i> Connect on GitHub
+        </a>
+      </div>
+      <div class="social-section">
+        <img src="assets/images/in.jpg" alt="LinkedIn" class="social-image">
+        <a href="https://www.linkedin.com/in/tanuja-negi-2839252b7" target="_blank" class="social-link">
+          <i class="fab fa-linkedin"></i> Connect on LinkedIn
+        </a>
+      </div>
+    </div>
+  </section>
+
+  <section id="resume">
+    <h1 class="section-title">RESUME</h1>
+    <div class="resume-buttons">
+      <a href="assets/resume/Tanuja_Negi_Resume.pdf" target="_blank" class="resume-btn">
+        <i class="fas fa-eye"></i> View Resume
+      </a>
+      <a href="assets/resume/Tanuja_Negi_Resume.pdf" download class="resume-btn">
+        <i class="fas fa-download"></i> Download Resume
+      </a>
     </div>
   </section>
 
