--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#peselab">Pese Lab</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#contact">Get in Touch</a></li>
+        <li><a href="#resume">Resume</a></li>
       </ul>
     </nav>
   </header>
